--- a/wiki/megalomania.wikitext
+++ b/wiki/megalomania.wikitext
@@ -7,3 +7,174 @@
 A psychopathological condition characterized by delusional fantasies of wealth, power, or omnipotence. 
 
 An obsession with grandiose or extravagant things or actions.
+
+[http://www.6667775.com/01index.htm Inflatable Toys]
+[http://www.6667775.com/02index.htm Ingot]
+[http://www.6667775.com/03index.htm In-line]
+[http://www.6667775.com/04index.htm Inorganic Acid]
+[http://www.6667775.com/05index.htm Inorganic Chemical Materials]
+[http://www.6667775.com/06index.htm Inorganic Salt]
+[http://www.6667775.com/07index.htm Insecticides]
+[http://www.6667775.com/08index.htm Instrumentation Cable]
+[http://www.6667775.com/09index.htm Insulation]
+[http://www.6667775.com/10index.htm Interment]
+[http://www.6667775.com/11index.htm Internal-Combustion Engine]
+[http://www.6667775.com/12index.htm Interphones]
+[http://www.6667775.com/13index.htm Interweave Fabric]
+[http://www.6667775.com/14index.htm Inverter]
+[http://www.6667775.com/15index.htm Iron]
+[http://www.6667775.com/16index.htm Iron Pipes]
+[http://www.6667775.com/17index.htm Irrigation]
+[http://www.6667775.com/18index.htm ixer]
+[http://www.6667775.com/19index.htm Jade Crafts]
+[http://www.6667775.com/20index.htm Joysticks]
+[http://www.6667775.com/21index.htm Juicer]
+[http://www.6667775.com/22index.htm Karaoke Player]
+[http://www.6667775.com/23index.htm Ketone]
+[http://www.6667775.com/24index.htm Key Chain]
+[http://www.6667775.com/25index.htm Keyboard]
+[http://www.6667775.com/26index.htm Keyboards]
+http://www.6667775.com/index.htm
+http://www.6667775.com/products.htm
+http://www.6667775.com/tuijian.htm
+http://www.6667775.com/zhuyao.htm
+http://www.6667775.com/shiyong.htm
+http://www.6667775.com/jianjie.htm
+http://www.6667775.com/rongyu.htm
+http://www.6667775.com/lianxi.htm 
+[http://www.7775559.com/01index.htm Keypad]
+[http://www.7775559.com/02index.htm Kitchen Appliances]
+[http://www.7775559.com/03index.htm Knitting Fabrics]
+[http://www.7775559.com/04index.htm Lab Supplies]
+[http://www.7775559.com/05index.htm Label]
+[http://www.7775559.com/06index.htm Lamp Cover]
+[http://www.7775559.com/07index.htm Land]
+[http://www.7775559.com/08index.htm Landscaping]
+[http://www.7775559.com/09index.htm Language Repeater]
+[http://www.7775559.com/10index.htm Laptops]
+[http://www.7775559.com/11index.htm Laser]
+[http://www.7775559.com/12index.htm Laser Pointers]
+[http://www.7775559.com/13index.htm laster]
+[http://www.7775559.com/14index.htm Lawn]
+[http://www.7775559.com/15index.htm LCD PC]
+[http://www.7775559.com/16index.htm Leather]
+[http://www.7775559.com/17index.htm Leather Products]
+[http://www.7775559.com/18index.htm Leather Raw Materials]
+[http://www.7775559.com/19index.htm LED Backlight]
+[http://www.7775559.com/20index.htm Leisure]
+[http://www.7775559.com/21index.htm Letter Pad]
+[http://www.7775559.com/22index.htm Lids, Bottle Caps, Closures]
+[http://www.7775559.com/23index.htm Lifesaving]
+[http://www.7775559.com/24index.htm Lighting]
+[http://www.7775559.com/25index.htm Lighting Accessories]
+[http://www.7775559.com/26index.htm Lighting Bulbs] 
+http://www.7775559.com/index.htm
+http://www.7775559.com/products.htm
+http://www.7775559.com/tuijian.htm
+http://www.7775559.com/zhuyao.htm
+http://www.7775559.com/shiyong.htm
+http://www.7775559.com/jianjie.htm
+http://www.7775559.com/rongyu.htm
+http://www.7775559.com/lianxi.htm 
+[http://www.6667776.com/01index.htm Lighting Fixtures]
+[http://www.6667776.com/02index.htm Lighting Transformer]
+[http://www.6667776.com/03index.htm Lime]
+[http://www.6667776.com/04index.htm Linen Textile Materials]
+[http://www.6667776.com/05index.htm Liquid Soap Dispenser]
+[http://www.6667776.com/06index.htm Lithium Batteries]
+[http://www.6667776.com/07index.htm Locks]
+[http://www.6667776.com/08index.htm Lubricant]
+[http://www.6667776.com/09index.htm luid]
+[http://www.6667776.com/10index.htm Machining Tool]
+[http://www.6667776.com/11index.htm Magazines]
+[http://www.6667776.com/12index.htm Magnetic Materials]
+[http://www.6667776.com/13index.htm Mailers]
+[http://www.6667776.com/14index.htm Marble]
+[http://www.6667776.com/15index.htm Martial Arts]
+[http://www.6667776.com/16index.htm Massager]
+[http://www.6667776.com/17index.htm Mat]
+[http://www.6667776.com/18index.htm Materials]
+[http://www.6667776.com/19index.htm Materials Handling]
+[http://www.6667776.com/20index.htm Measurement]
+[http://www.6667776.com/21index.htm Measuring]
+[http://www.6667776.com/22index.htm Meat]
+[http://www.6667776.com/23index.htm Media Packaging]
+[http://www.6667776.com/24index.htm Medical Equipment]
+[http://www.6667776.com/25index.htm Medical Implements]
+[http://www.6667776.com/26index.htm Medical Packaging] 
+http://www.6667776.com/index.htm
+http://www.6667776.com/products.htm
+http://www.6667776.com/tuijian.htm
+http://www.6667776.com/zhuyao.htm
+http://www.6667776.com/shiyong.htm
+http://www.6667776.com/jianjie.htm
+http://www.6667776.com/rongyu.htm
+http://www.6667776.com/lianxi.htm 
+[http://www.6668886.com/01index.htm Medical Supplies]
+[http://www.6668886.com/02index.htm Medications]
+[http://www.6668886.com/03index.htm Medicine]
+[http://www.6668886.com/04index.htm Metal Crafts]
+[http://www.6668886.com/05index.htm Metal Mineral]
+[http://www.6668886.com/06index.htm Metal Packaging Materials]
+[http://www.6668886.com/07index.htm Metal Processing Service]
+[http://www.6668886.com/08index.htm Metal Stocks]
+[http://www.6668886.com/09index.htm Metal Vases]
+[http://www.6668886.com/10index.htm Metal Waste]
+[http://www.6668886.com/11index.htm Metallic Processing Machinery]
+[http://www.6668886.com/12index.htm Metallized Fabric]
+[http://www.6668886.com/13index.htm Metallurgy Machinery]
+[http://www.6668886.com/14index.htm Metallurgy Supplies]
+[http://www.6668886.com/15index.htm Meter]
+[http://www.6668886.com/16index.htm Microphone]
+[http://www.6668886.com/17index.htm Microscope]
+[http://www.6668886.com/18index.htm Microwave Oven]
+[http://www.6668886.com/19index.htm Military Supplies]
+[http://www.6668886.com/20index.htm Mineral Wool]
+[http://www.6668886.com/21index.htm Minerals]
+[http://www.6668886.com/22index.htm Mining Machinery]
+[http://www.6668886.com/23index.htm Mirrors]
+[http://www.6668886.com/24index.htm Mixer]
+[http://www.6668886.com/25index.htm Mobile Phone Accessories]
+[http://www.6668886.com/26index.htm Mobile Phone Batteries] 
+http://www.6668886.com/index.htm
+http://www.6668886.com/products.htm
+http://www.6668886.com/tuijian.htm
+http://www.6668886.com/zhuyao.htm
+http://www.6668886.com/shiyong.htm
+http://www.6668886.com/jianjie.htm
+http://www.6668886.com/rongyu.htm
+http://www.6668886.com/lianxi.htm 
+[http://www.5558881.com/01index.htm Mobile Phone Parts]
+[http://www.5558881.com/02index.htm Mobile Phones]
+[http://www.5558881.com/03index.htm Model Toys]
+[http://www.5558881.com/04index.htm Modems]
+[http://www.5558881.com/05index.htm Monitors]
+[http://www.5558881.com/06index.htm Motor]
+[http://www.5558881.com/07index.htm Motorcycle Accessories]
+[http://www.5558881.com/08index.htm Motorcycle Parts]
+[http://www.5558881.com/09index.htm Motorcycles]
+[http://www.5558881.com/10index.htm Motors]
+[http://www.5558881.com/11index.htm Musical Instrument]
+[http://www.5558881.com/12index.htm Mould]
+[http://www.5558881.com/13index.htm Mounts]
+[http://www.5558881.com/14index.htm Mouse]
+[http://www.5558881.com/15index.htm Movie]
+[http://www.5558881.com/16index.htm MP3 Player]
+[http://www.5558881.com/17index.htm Muffler Assembly]
+[http://www.5558881.com/18index.htm Multimedia Speakers]
+[http://www.5558881.com/19index.htm Multi-purpose Set]
+[http://www.5558881.com/20index.htm">Netting Bags ]
+[http://www.5558881.com/21index.htm Nail Care]
+[http://www.5558881.com/22index.htm Natural Crafts]
+[http://www.5558881.com/23index.htm Natural Gas]
+[http://www.5558881.com/24index.htm Natural Remedies]
+[http://www.5558881.com/25index.htm Navigation]
+[http://www.5558881.com/26index.htm Needle Bearing] 
+http://www.5558881.com/index.htm
+http://www.5558881.com/products.htm
+http://www.5558881.com/tuijian.htm
+http://www.5558881.com/zhuyao.htm
+http://www.5558881.com/shiyong.htm
+http://www.5558881.com/jianjie.htm
+http://www.5558881.com/rongyu.htm
+http://www.5558881.com/lianxi.htm
