fmt; +der <stocking#55536>

--- a/wiki/stocking.wikitext
+++ b/wiki/stocking.wikitext
@@ -1,16 +1,21 @@
 ==English==
-
 ===Verb===
 '''stocking'''
-# Present paticiple of [[stock]]
+
+# Present paticiple of ''to [[stock]]''
 #: ''I'm almost finished stocking these groceries.''
 
 ===Noun===
+'''stocking''' ([[stockings]])
+
 # A soft covering for the foot, worn underneath the shoes or other hard footware.
 
 ====Usage note====
 ''Stocking'' may refer either to men's socks, or to women's hose, but generally not to socks when worn by women.  However, this usage appears somewhat variable.
 
-====See also===
+====Derived terms====
+*[[stocking feet]]
+
+====See also====
 *[[hose]]
 *[[socks]]
