--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -8,7 +8,7 @@ Traditionally, Zen traces its roots back to [[Indian Buddhism]], where it was kn
 According to these traditional accounts, an Indian monk named [[Bodhidharma]] brought Zen Buddhism to [[China]] in the [[5th century|fifth century]]. Later, [[Korea|Korean]] monks studying in [[China]] learned of Zen and spread it as far as [[Japan]] around the seventh century.
 
 ==Zen in Japan==
-{| border=1 width=300 cellpadding=2 cellspacing=0 align=right
+{| border=1 width=300 cellpadding=2 cellspacing=0 align=right style="margin:0 0 1em 1em;"
 |-
 ! colspan=2 align=center bgcolor=#FFCCCC | '''Zen'''
 |-
