--- a/wiki/%E7%BE%BD.wikitext
+++ b/wiki/%E7%BE%BD.wikitext
@@ -32,6 +32,17 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yu5
 
+===Compounds===
+*[[羽翅]]
+*[[羽冠]]
+*[[羽毛]]
+*[[羽毛丰满]]
+*[[羽毛球]]
+*[[羽毛未丰]]
+*[[羽绒]]
+*[[羽扇]]
+*[[羽翼]]
+
 * '''Other info''': 
 
 ----
