--- a/wiki/%E9%B1%BC.wikitext
+++ b/wiki/%E9%B1%BC.wikitext
@@ -34,6 +34,55 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[魚]]
 
+===Compounds===
+*[[鱼鳔]]
+*[[鱼叉]]
+*[[鱼池]]
+*[[鱼翅]]
+*[[鱼虫]], [[鱼虫儿]]
+*[[鱼刺]]
+*[[鱼肚]]
+*[[鱼肚白]]
+*[[鱼饵]]
+*[[鱼粉]]
+*[[鱼肝油]]
+*[[鱼竿]]
+*[[鱼缸]]
+*[[鱼钩]], [[鱼钩儿]]
+*[[鱼贯]]
+*[[鱼具]]
+*[[鱼雷]]
+*[[鱼雷艇]]
+*[[鱼类]]
+*[[鱼鳞]]
+*[[鱼龙混杂]]
+*[[鱼篓]]
+*[[鱼卵]]
+*[[鱼米之乡]]
+*[[鱼苗]]
+*[[鱼目混珠]]
+*[[鱼漂]], [[鱼漂儿]]
+*[[鱼情]]
+*[[鱼群探测器]]
+*[[鱼肉]]
+*[[鱼市]]
+*[[鱼水]]
+*[[鱼水情]]
+*[[鱼死网破]]
+*[[鱼塘]]
+*[[鱼网]]
+*[[鱼尾纹]]
+*[[鱼鲜]]
+*[[鱼汛]]
+*[[鱼秧子]]
+*[[鱼鹰]]
+*[[鱼油]]
+*[[鱼游釜中]]
+*[[鱼跃救球]]
+*[[鱼找鱼，虾找虾]]
+*[[鱼子]]
+*[[鱼子酱]]
+
 * '''Other info''': 
 
 ----
