--- a/wiki/spades.wikitext
+++ b/wiki/spades.wikitext
@@ -22,6 +22,7 @@
 *Italian: [[picche]] ''f plural''
 *Polish: [[pik]] ''m''
 *Spanish: [[picas]] ''f plural''
+*Arabic: Sibeet
 
 ===Related words===
 *[[spade]]
