--- a/wiki/hearts.wikitext
+++ b/wiki/hearts.wikitext
@@ -15,6 +15,7 @@
 *Italian: [[cuori]] ''m plural''
 *Polish: [[kier]] ''m''
 *Spanish: [[corazones]] ''m plural''
+*Arabic: Haas
 
 ===Related words===
 *[[heart]]
