--- a/wiki/diamonds.wikitext
+++ b/wiki/diamonds.wikitext
@@ -11,6 +11,7 @@
 *German: [[Karozeichen]] ''n''
 *French: [[carreau]] ''m singular''
 *Italian: [[quadri]] ''m plural''
+*Arabic: Dayman
 
 ===Related words===
 *[[diamond]]
