--- a/wiki/clubs.wikitext
+++ b/wiki/clubs.wikitext
@@ -15,6 +15,7 @@
 *Italian: [[fiori]] ''m plural''
 *Polish: [[trefl]] ''m''
 *Spanish: [[bastos]] ''m pl''
+*Arabic: Kalafs
 
 ===Related words===
 *[[club]]
