--- a/wiki/willy.wikitext
+++ b/wiki/willy.wikitext
@@ -5,6 +5,12 @@
 #A [[diminutive]] of the male [[given name]] [[William]].
 
 ===Noun===
-'''willy''' (''plural'' '''willies''')
+'''willy, willie''' (''plural'' '''willies''')
 
-#(''British''; ''[[hypocoristic]]'') The [[penis]].
+#(''British''; ''[[informal]]'') The [[penis]]. Usually used by parents or children when speaking with children.
+
+'''willies'''
+#(''[[informal]]'') A feeling of nervousness or fear. ''Staying in the haunted house gives me the willies.''
+
+===Etymology===
+Possibly a contraction of ''membrum virile'', a term used in the nineteenth century.
