--- a/wiki/willy.wikitext
+++ b/wiki/willy.wikitext
@@ -7,10 +7,12 @@
 ===Noun===
 '''willy, willie''' (''plural'' '''willies''')
 
-#(''British''; ''[[informal]]'') The [[penis]]. Usually used by parents or children when speaking with children.
+#(''British''; ''[[informal]]'') [[Penis]]. Usually used by parents or children when speaking with children.
 
-'''willies'''
+''[the]'' '''willies'''
+
 #(''[[informal]]'') A feeling of nervousness or fear. ''Staying in the haunted house gives me the willies.''
 
-===Etymology===
-Possibly a contraction of ''membrum virile'', a term used in the nineteenth century.
+====Etymology====
+'''willy, willie'''
+Possibly a contraction of ''membrum virile'', a Latin term used in English in the nineteenth century.
