--- a/wiki/derivative.wikitext
+++ b/wiki/derivative.wikitext
@@ -22,4 +22,4 @@ Middle English from French ''dérivatif'' and Latin ''derivatus''. See [[derive]
 *Dutch: [[afgeleide]] ''f'' (1), [[afleiding]] ''f'' (2)
 *German: [[Ableitung]] ''f'' (5)
 *Polish: [[derywat]] ''m'' (1, 2), [[pochodna]] ''f'' (3, 4)
-*Spanish: [[derivativo]]
+*Spanish: [[derivativo]] ''m'' (1-4), [[derivada]] ''f'' (5)
