--- a/wiki/%E5%A5%87.wikitext
+++ b/wiki/%E5%A5%87.wikitext
@@ -12,31 +12,102 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': strange, unusual, uncanny, occult
+* '''Common Meaning''': [[strange]], [[unusual]], [[uncanny]], [[occult]], [[odd]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': qí (qi2)
-*** '''[[Wade-Giles]]''': ch'i<sup>2</sup>
+*** '''[[Pinyin]]''': jī (ji1), qí (qi2)
+*** '''[[Wade-Giles]]''': chi<sup>1</sup>, ch'i<sup>2</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': kei4
 
+===Compounds===
+#jī
+#*[[奇零]]
+#*[[奇偶]]
+#*[[奇偶性]]
+#*[[奇数]]
+#qí
+#*[[奇昂]]
+#*[[奇拔]]
+#*[[奇兵]]
+#*[[奇才]]
+#*[[奇策]]
+#*[[奇耻大辱]]
+#*[[奇峰]]
+#*[[奇功]]
+#*[[奇怪]]
+#*[[奇观]]
+#*[[奇瑰]]
+#*[[奇诡]]
+#*[[奇花异草]]
+#*[[奇幻]]
+#*[[奇货可居]]
+#*[[奇祸]]
+#*[[奇计]]
+#*[[奇迹]]
+#*[[奇景]]
+#*[[奇绝]]
+#*[[奇崛]]
+#*[[奇峻]]
+#*[[奇丽]]
+#*[[奇妙]]
+#*[[奇谋]]
+#*[[奇葩]]
+#*[[奇癖]]
+#*[[奇僻]]
+#*[[奇巧]]
+#*[[奇趣]]
+#*[[奇缺]]
+#*[[奇事]]
+#*[[奇谈]]
+#*[[奇谈怪论]]
+#*[[奇特]]
+#*[[奇伟]]
+#*[[奇文共赏]]
+#*[[奇闻]]
+#*[[奇袭]]
+#*[[奇效]]
+#*[[奇形怪状]]
+#*[[奇秀]]
+#*[[奇勋]]
+#*[[奇异]]
+#*[[奇遇]]
+#*[[奇珍异宝]]
+#*[[奇装异服]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[き]] (ki)
 ** '''[[Kun]]''': [[くし]] (kushi), [[めずらしい]] (mezurashii), [[あやしい]] (ayashii)
+
+===Compounds===
+*[[奇異]]
+*[[奇怪]]
+*[[奇遇]]
+*[[奇骨]]
+*[[奇才]]
+*[[奇襲]]
+*[[奇術]]
+*[[奇人]]
+*[[奇数]]
+*[[奇跡]]
+*[[奇特]]
+*[[奇抜]]
+*[[奇癖]]
+*[[奇妙]]
 
 * '''Other info''':  
 
