--- a/wiki/elite.wikitext
+++ b/wiki/elite.wikitext
@@ -4,4 +4,9 @@
 
 '''elite'''
 
-#A choice or select body; the flower; as, the elite of society.
+#a [[special]] [[group]] or [[social]] [[class]] of [[people]] which have a [[superior]] [[intellectual]], social or [[economic]] [[status]] as, the elite of society
+#[[someone]] who is [[among]] the [[best]] at [[certain]] [[task]]
+
+=== External links ===
+
+See [[w:Elite]] for encyclopedia entry in our sister project, Wikipedia, The Free Encyclopedia
