--- a/wiki/Uzbek.wikitext
+++ b/wiki/Uzbek.wikitext
@@ -7,6 +7,7 @@
 #:*[[German]]: [[Usbeke]] ''m'', [[Usbekin]] ''f''
 #:*[[Hebrew]]: [[אוזבקי]] ''m'', [[אוזבקית]] ''f''
 #:*[[Spanish]]: [[uzbeko]] ''m''
+#:*[[Ukrainian]]: [[узбек]] ''m'', [[узбечка]] ''f''
 
 ===Adjective===
 #Of, from, or pertaining to Uzbekistan, the Uzbek people or the Uzbek language.
