--- a/wiki/Uzbek.wikitext
+++ b/wiki/Uzbek.wikitext
@@ -18,3 +18,4 @@
 #:*[[French]]: [[ouzbek]]
 #:*[[German]]: [[usbekisch]]
 #:*[[Spanish]]: [[uzbeko]]
+#:*[[Ukrainian]]: [[узбецький]] ''m'', [[узбецька]] ''f''
