--- a/wiki/evanescence.wikitext
+++ b/wiki/evanescence.wikitext
@@ -3,10 +3,10 @@
 ===Noun===
 '''evanescence'''
 
-#The act or state of vanishing away; disappearance;
-#: ''the evanescence of vapor, of a dream, of earthly plants or hopes.'' --Rambler
-#The event of fading and gradually vanishing from sight;
-#: ''the evanescence of the morning mist.''
+#The [[act]] or [[state]] of [[vanish]]ing away; [[disappearance]];
+#: ''the evanescence of [[vapor]], of a [[dream]], of [[earthly]] [[plant]]s or [[hope]]s.'' --Rambler
+#The [[event]] of [[fade|fading]] and [[gradual]]ly vanishing from [[sight]];
+#: ''the evanescence of the [[morning]] [[mist]].''
 
 ===Verb===
-#To dissipate or disappear like vapor.
+#To [[dissipate]] or disappear like vapor.
