--- a/wiki/%E5%90%83.wikitext
+++ b/wiki/%E5%90%83.wikitext
@@ -19,7 +19,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -30,6 +30,60 @@
 ***'''[[Jyutping]]''':
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': hek3
+
+===Compounds===
+*[[吃白饭]]
+*[[吃白眼]]
+*[[吃败仗]]
+*[[吃饱]]
+*[[吃饱了撑的]]
+*[[吃闭门羹]]
+*[[吃不到]]
+*[[吃不得]]
+*[[吃不动]]
+*[[吃不惯]]
+*[[吃不好]]
+*[[吃不开]]
+*[[吃不来]]
+*[[吃不了]]
+*[[吃不了，兜着走]]
+*[[吃不起]]
+*[[吃不上]]
+*[[吃不透]]
+*[[吃不下]]
+*[[吃不消]]
+*[[吃不住]]
+*[[吃不准]]
+*[[吃茶]]
+*[[吃吃喝喝]]
+*[[吃醋]]
+*[[吃大锅饭]]
+*[[吃刀]]
+*[[吃得开]]
+*[[吃得苦中苦，方为人上人]]
+*[[吃得来]]
+*[[吃得了]]
+*[[吃得下]]
+*[[吃得消]]
+*[[吃得住]]
+*[[吃掉]]
+*[[吃定心丸]]
+*[[吃豆腐]]
+*[[吃独食]], [[吃独食儿]]
+*[[吃耳光]]
+*[[吃饭]]
+*[[吃干醋]]
+*[[吃干饭]]
+*[[吃功夫]]
+*[[吃官司]]
+*[[吃管子]]
+*[[吃惯]]
+*[[吃好]]
+*[[吃喝嫖赌]]
+*[[吃喝儿]]
+*[[吃喝玩乐]]
+*[[吃黑枣儿]]
+*[[吃后悔药]], [[吃后悔药儿]]
 
 * '''Other info''': 
 
