--- a/wiki/tap.wikitext
+++ b/wiki/tap.wikitext
@@ -1,20 +1,25 @@
 ==English==
 === Noun ===
-#A device used to dispense liquids. 
-#:"We don't have bottled [[water]], you'll have to get it from the ''tap''."
+#A [[device]] used to [[dispense]] [[liquid]]s. 
+#:"We don't have [[bottle]]d [[water]], you'll have to get it from the ''tap''."
+
+=== Synonims ===
+
+# [[faucet]]
 
 === Translation ===
+*[[Polish]]: [[kran]]
 *[[Turkish]]: [[musluk]]
 
 === Verb ===
-#To touch one's finger, foot, or other body parts on a [[surface]] repeatedly.  ("He was so nervous he began to ''tap'' his fingers on the [[table]].")
-#To have something available.  ("We have draft [[beer]] on ''tap''.")
-#To make a sharp [[noise]].  ("The [[tree]], swaying in the [[breeze]], began to ''tap'' on the [[window]] pane.")
-#To access a [[resource]] or object.  ("When he ran out of money, he decided to ''tap'' into his [[trust fund]].")
-#To place a listening or recording device on a telephone or wired connection ("They can't ''tap'' the phone without a [[warrant]].")
-#To intercept a communication without authority.  ("He was known to ''tap'' [[Cable TV]] and [[satellite]] dishes.")
+#To [[touch]] one's [[finger]], [[foot]], or [[other]] [[body]] [[part]]s on a [[surface]] [[repeatedly]].  ("He was so [[nervous]] he began to ''tap'' his fingers on the [[table]].")
+#To have [[something]] [[available]].  ("We have [[draft]] [[beer]] on ''tap''.")
+#To [[make]] a [[sharp]] [[noise]].  ("The [[tree]], [[sway]]ing in the [[breeze]], began to ''tap'' on the [[window]] [[pane]].")
+#To [[access]] a [[resource]] or [[object]].  ("When he ran out of [[money]], he [[decide]]d to ''tap'' into his [[trust fund]].")
+#To [[place]] a [[listen]]ing or [[record]]ing device on a [[telephone]] or [[wired connection]] ("They can't ''tap'' the phone without a [[warrant]].")
+#To [[intercept]] a [[communication]] without [[authority]].  ("He was known to ''tap'' [[Cable TV]] and [[satellite]] [[dish]]es.")
 
-===See Also===
+===Synonims===
 *[[hit]]
 *[[strike]]
 *[[pound]]
