--- a/wiki/frugal.wikitext
+++ b/wiki/frugal.wikitext
@@ -1,3 +1,12 @@
-'''Adjective'''
+==French==
+===Adjective===
+'''frugal''' (''m pl.'' frugaux)
 
-1. [[miserly]], [[avoid]]ing [[waste]]
+# [[miserly]], [[avoid]]ing [[waste]]
+
+===Synonyms===
+*[[sobre]]
+
+===Related terms===
+*[[frugalement]]
+*[[frugalité]]
