--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -1,5 +1,5 @@
 {{buddhism}}
-'''Zen''' is the [[Japanese]] name of a well known branch of [[Mahayana|Mah&#257;y&#257;na]] [[Buddhism]], practiced especially in [[Chinese Buddhism|China]], [[Japanese Buddhism|Japan]], and [[Korean Buddhism|Korea]]. It stresses the role of [[meditation]] in pursuing [[Enlightenment (Buddhism)|enlightenment]].  Because Zen is the common name for this branch in [[Japanese language|Japanese]] as well as in [[English language|English]], this article will concern itself both with Zen as practiced in Japan and with Zen as an international phenomenon.  For information specific to [[Asia]]n countries other than Japan, please follow the appropriate links above.
+'''Zen''' is the [[Japanese]] name of a well known branch of [[Mahayana|Mah&#257;y&#257;na]] [[Buddhism]], practiced especially in [[Chinese Buddhism|China]], [[Japanese Buddhism|Japan]], [[Vietnamese Buddhism|Vietnam]] and [[Korean Buddhism|Korea]]. It stresses the role of [[meditation]] in pursuing [[Enlightenment (Buddhism)|enlightenment]].  Because Zen is the common name for this branch in [[Japanese language|Japanese]] as well as in [[English language|English]], this article will concern itself both with Zen as practiced in Japan and with Zen as an international phenomenon.  For information specific to [[Asia]]n countries other than Japan, please follow the appropriate links above.
 
 ==Spread of Zen==
 
