--- a/wiki/generosity.wikitext
+++ b/wiki/generosity.wikitext
@@ -3,5 +3,5 @@
 # the trait of being willing to give your money and/or time
 # acting [[generously]]
 
-== Etymology ==
+=== Etymology ===
 See etymology section in [[generous]]
