--- a/wiki/octagon.wikitext
+++ b/wiki/octagon.wikitext
@@ -19,6 +19,9 @@
 *Slovak: [[osemuholník]]  ''m''
 *Spanish: [[octógono]] ''m''
 
+===Etymology===
+First attested in 1656, from [[Latin]] [[octagonos]], from Gk. [[oktagononos]], literally "eight-angled," from ''okto'' "eight" + ''gonia'' "angle". The adjective [[octagonal]] was first mentioned from 1571.
+
 ===Related words===
 
 *[[octagonal]]
