--- a/wiki/octagon.wikitext
+++ b/wiki/octagon.wikitext
@@ -20,7 +20,7 @@
 *Spanish: [[octógono]] ''m''
 
 ===Etymology===
-First attested in 1656, from [[Latin]] [[octagonos]], from Gk. [[oktagononos]], literally "eight-angled," from ''okto'' "eight" + ''gonia'' "angle". The adjective [[octagonal]] was first mentioned from 1571.
+First attested in [[1656]], from [[Latin]] [[octagonos]], from [[Greek]] [[oktagononos]], literally "eight-angled," from ''[[okto]]'' "eight" + ''[[gonia]]'' "angle". The adjective [[octagonal]] was first mentioned from [[1571]].
 
 ===Related words===
 
