added the sanskrit <cloud#7890>

--- a/wiki/cloud.wikitext
+++ b/wiki/cloud.wikitext
@@ -29,6 +29,7 @@
 *Polish: [[chmura]] ''f'' (1,2,3)
 *Portuguese: [[nuvem]] ''f'' (1,2,3)
 *[[Romanian]]: [[nor]] ''m''
+*Sanskrit: [[मेघ]]
 *Slovene: [[oblak]] ''m''
 *Spanish: [[nube]]
 *Swedish: [[moln]]
