--- a/wiki/Indo-.wikitext
+++ b/wiki/Indo-.wikitext
@@ -1,5 +1,6 @@
-[[Media:Example.mp3]]<math>Insert formula here</math>[[Image:Example.jpg]]
-== Headline text ==
-[http://www.example.com link title][[Link title]][[Image:Example.jpg]]<nowiki>Insert non-formatted text here</nowiki>[[Media:Example.mp3]]
-== Headline text ==
-[http://www.example.com link title][[Image:Example.jpg]]
+
+# [[India]]
+
+===Deriverd terms===
+*[[Indochina]]
+*[[Indo-European languages]]
