--- a/wiki/octagon.wikitext
+++ b/wiki/octagon.wikitext
@@ -15,6 +15,7 @@
 *French: [[octogone]] ''m''
 *German: [[Achteck]] ''n''
 *Italian: [[ottagono]] ''m''
+*Japanese: [[八角形]]
 *Russian: [[восьмиугольник]] ''m''
 *Slovak: [[osemuholník]]  ''m''
 *Spanish: [[octógono]] ''m''
