--- a/wiki/cloud.wikitext
+++ b/wiki/cloud.wikitext
@@ -5,11 +5,11 @@
 # a group of something
 
 ==== Translations ====
-*[[Arabic]] سحابة or غيمة
+*[[Arabic]] [[سحابة]] or [[غيمة]]
 *[[Albanian]]: [[re]] ''f''
 *[[Bavarian]]: [[Woikn]] ''f'' (1,2)
 *[[Breton]]: [[koumoul]] ''collective noun'' koumoulenn ''singular f''
-*Chinese: [[云]]
+*Chinese: [[雲]]/[[云]]
 *Dutch: [[wolk]] ''f''
 *[[Ekspreso]]: [[nube]]
 *[[Esperanto]]: [[nubo]]
