--- a/wiki/elite.wikitext
+++ b/wiki/elite.wikitext
@@ -7,6 +7,12 @@
 #a [[special]] [[group]] or [[social]] [[class]] of [[people]] which have a [[superior]] [[intellectual]], social or [[economic]] [[status]] as, the elite of society
 #[[someone]] who is [[among]] the [[best]] at [[certain]] [[task]]
 
+===Related terms===
+*[[elect]]
+*[[élire]]
+*[[elitism]]
+*[[elitist]]
+
 === External links ===
 
 See [[w:Elite]] for encyclopedia entry in our sister project, Wikipedia, The Free Encyclopedia
