--- a/wiki/combatant.wikitext
+++ b/wiki/combatant.wikitext
@@ -4,6 +4,6 @@
 
 '''combatant'''
 
-a fighter 
+an armed fighter 
   
 ''Gladiators were combatants who fought to their death to entertain the public.''
