--- a/wiki/%E6%BB%BF.wikitext
+++ b/wiki/%E6%BB%BF.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[满]]
+* '''Alternate form''': [[满]], [[満]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 85''': [[Wiktionary:Chinese radical index 水|水]]+11 strokes
 
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fill
-*# full, satisfied
+*# [[fill]]
+*# [[full]], [[satisfied]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +38,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[まん]] (man), [[ばん]] (ban)
