--- a/wiki/%E6%BA%80.wikitext
+++ b/wiki/%E6%BA%80.wikitext
@@ -13,26 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
+*# [[fill]]
+*# [[full]], [[satisfied]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
-
-* '''Romanizations'''
-** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': jiān (jian1), mǎn (man3)
-*** '''[[Wade-Giles]]''': chien<sup>1</sup>, man<sup>3</sup>
-*** '''[[Yale]]''': 
-** '''[[Cantonese]]'''
-*** '''[[Jyutping]]''':
-*** '''[[Penkyamp]]''': 
-*** '''[[Yale]]''': 
-
-* '''Other info''': 
-
-----
-
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[まん]] (man), [[ばん]] (ban)
