--- a/wiki/cockamamy.wikitext
+++ b/wiki/cockamamy.wikitext
@@ -1,3 +1,9 @@
 =={{En}}==
+===Etymology===
+From a word used to describe a child's rub-on [[tattoo]]. 
 ===Adjective===
-# [[Foolish]], [[silly]].
+# [[Foolish]], [[silly]]
+# [[Trifling]]
+
+====Alternative spelling==
+* [[Cockamamie]]
