/* Alternative spelling]] */ <cockamamie#1477473>

--- a/wiki/cockamamie.wikitext
+++ b/wiki/cockamamie.wikitext
@@ -5,5 +5,5 @@ From a word used to describe a child's rub-on [[tattoo]].
 # [[Foolish]], [[silly]]
 # [[Trifling]]
 
-===Alternative spelling]]===
+===Alternative spelling===
 * [[Cockamamy]]
