--- a/wiki/%E5%90%83.wikitext
+++ b/wiki/%E5%90%83.wikitext
@@ -84,6 +84,73 @@
 *[[吃喝玩乐]]
 *[[吃黑枣儿]]
 *[[吃后悔药]], [[吃后悔药儿]]
+*[[吃花酒]]
+*[[吃皇粮]]
+*[[吃回扣]]
+*[[吃回头草]]
+*[[吃荤]]
+*[[吃货]]
+*[[吃紧]]
+*[[吃劲]], [[吃劲儿]]
+*[[吃惊]]
+*[[吃酒]]
+*[[吃开口饭]]
+*[[吃糠咽菜]]
+*[[吃客]]
+*[[吃空额]]
+*[[吃苦]]
+*[[吃苦头]]
+*[[吃亏]]
+*[[吃劳保]]
+*[[吃老本]], [[吃老本儿]]
+*[[吃累]]
+*[[吃里爬外]]
+*[[吃力]]
+*[[吃零食]]
+*[[吃零嘴]]
+*[[吃码头]]
+*[[吃闷亏]]
+*[[吃腻]]
+*[[吃偏饭]]
+*[[吃枪药]]
+*[[吃枪子]], [[吃枪子儿]]
+*[[吃青]]
+*[[吃青春饭]]
+*[[吃请]]
+*[[吃儿]]
+*[[吃人家的嘴软，拿人家的手短]]
+*[[吃软不吃硬]]
+*[[吃软饭]]
+*[[吃伤]]
+*[[吃商品粮]]
+*[[吃食]], [[吃食儿]]
+*[[吃食堂]]
+*[[吃水]]
+*[[吃水不忘掘井人]]
+*[[吃素]]
+*[[吃透]]
+*[[吃席]]
+*[[吃喜酒]]
+*[[吃闲饭]]
+*[[吃现成饭]]
+*[[吃香]]
+*[[吃相]]
+*[[吃小亏，占大便宜]]
+*[[吃小灶]]
+*[[吃心]]
+*[[吃鸭蛋]]
+*[[吃哑巴亏]]
+*[[吃一堑，长一智]]
+*[[吃赃]]
+*[[吃斋]]
+*[[吃着碗里，望着锅里]]
+*[[吃重]]
+*[[吃主]], [[吃主儿]]
+*[[吃住]]
+*[[吃准]]
+*[[吃租]]
+*[[吃嘴]]
+*[[吃罪]]
 
 * '''Other info''': 
 
