--- a/wiki/suede.wikitext
+++ b/wiki/suede.wikitext
@@ -1,3 +1,6 @@
 =={{En}}==
 ===Noun===
 # A type of soft [[leather]], made from [[calfskin]], with a [[brushed]] [[texture]] to resemble [[fabric]]. It is often to make [[boots]], [[clothing]] and [[fashion]] accessories.
+
+===Etymology===
+French ''[[Suède]]'' Sweden, swedish
