--- a/wiki/%E7%BF%98.wikitext
+++ b/wiki/%E7%BF%98.wikitext
@@ -12,16 +12,16 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': turn up, lift, elevate, raise
+* '''Common Meaning''': turn up, [[lift]], elevate, raise
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': qiáo (qiao2)
-*** '''[[Wade-Giles]]''': ch'iao<sup>2</sup>
+*** '''[[Pinyin]]''': qiáo (qiao2), qiào (qiao4)
+*** '''[[Wade-Giles]]''': ch'iao<sup>2</sup>, ch'iao<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
@@ -30,6 +30,20 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[翹]]
+
+===Compounds===
+#qiáo
+#*[[翘楚]]
+#*[[翘盼]]
+#*[[翘企]]
+#*[[翘首]]
+#*[[翘望]]
+#*[[翘足]]
+#*[[翘足引领]]
+#qiào
+#*[[翘板]], [[翘翘板]]
+#*[[翘辫子]]
+#*[[翘尾巴]]
 
 * '''Other info''': 
 
