/* [[Translations]] */ [[Hindi]]: [[विक्षनरी]] <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -23,7 +23,7 @@
 *[[Ga]]: [[Wikishinari]]
 *[[German]]: [[Wikiwörterbuch]]
 *[[Hebrew]]: [[ויקשנרי]] (Wiktionary)
-*[[Hindi]]: [[विक्शनरी]] विकीशब्दकोश
+*[[Hindi]]: [[विक्षनरी]] विकीशब्दकोश
 *[[Interlingua]]: [[Wiktionario]]
 *[[Italian]]: [[Wikizionario]], [[Wikzionario]]
 *[[Japanese]]: [[ウィクショナリー]] (Wikushonarī) <!-- "latin small letter i with macron" works? -->
