--- a/wiki/%E0%A4%B5%E0%A4%BF%E0%A4%95%E0%A5%8D%E0%A4%B7%E0%A4%A8%E0%A4%B0%E0%A5%80.wikitext
+++ b/wiki/%E0%A4%B5%E0%A4%BF%E0%A4%95%E0%A5%8D%E0%A4%B7%E0%A4%A8%E0%A4%B0%E0%A5%80.wikitext
@@ -1,8 +1,6 @@
-{{-hi-}}
+==Hindi==
+===Noun===
 
-{{-noun-}}
-
-* [[Wiktionary]]
-
-[[hi:Wiktionary]]
+#[[Wiktionary]]
 [[fr:Wiktionary]]
+[[hi:Wiktionary]]
