--- a/wiki/informaci%C3%B3n.wikitext
+++ b/wiki/informaci%C3%B3n.wikitext
@@ -1,4 +1,5 @@
 ==[[Spanish]]==
+Conjunto de datos oraganizados
 ===[[Translations]]===
 *[[Dutch]]: [[informatie]]''f''
 *[[English]]: [[information]]
