--- a/wiki/informaci%C3%B3n.wikitext
+++ b/wiki/informaci%C3%B3n.wikitext
@@ -1,5 +1,5 @@
 ==[[Spanish]]==
-Conjunto de datos oraganizados
+Conjunto de datos organizados
 ===[[Translations]]===
 *[[Dutch]]: [[informatie]]''f''
 *[[English]]: [[information]]
