--- a/wiki/%E8%93%9D.wikitext
+++ b/wiki/%E8%93%9D.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#blue
-*# indigo plant
+*# [[blue]]
+*# [[indigo]] plant
 *# surname
-
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,6 +33,25 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[藍]]
+
+===Compounds===
+*[[蓝宝石]]
+*[[蓝本]]
+*[[蓝靛]]
+*[[蓝矾]]
+*[[蓝黑]]
+*[[蓝晶晶]], [[蓝晶晶的]]
+*[[蓝鲸]]
+*[[蓝领]]
+*[[蓝皮书]]
+*[[蓝色]]
+*[[蓝闪闪]], [[蓝闪闪的]]
+*[[蓝天]]
+*[[蓝田生玉]]
+*[[蓝图]]
+*[[蓝盈盈]], [[蓝莹莹]]
+*[[蓝藻]]
+*[[蓝湛湛]]
 
 * '''Other info''': 
 
