--- a/wiki/rose.wikitext
+++ b/wiki/rose.wikitext
@@ -10,7 +10,7 @@
 
 #a [[shrub]] of the genus ''Rosa'', with red, pink, white or yellow [[flower]]s
 #a flower of the rose plant
-#a [[purple|purplish]]-[[red]] or [[pink]] [[color|colour]], the colour of some rose flowers
+#a [[purple|purplish]]-[[red]] or [[pink]] [[colour]], the colour of some rose flowers
 #a round [[nozzle]] for a sprinkling can or hose
 
 ====Scientific name====
@@ -28,7 +28,7 @@
 *Indonesian: [[mawar]]
 *[[Interlingua]]: [[rosa]]
 *Italian: [[rosa]]
-*Japanese: [[薔薇]] (バラ, bara)
+*Japanese: [[薔薇]] (ばら, bara)
 *Latin: [[rosa]] ''f''
 *{{pl}}: [[róża]] ''f''
 *Portuguese: [[rosa]] ''f'' (1,2,3), [[cor de rosa]] ''m'' (3)
@@ -80,28 +80,22 @@
 
 ==French==
 ===Pronunciation===
-*[[w:IPA|IPA]]: /rozə/
+*[[w:IPA|IPA]]: /roz(ə)/
 
 ===Adjective===
 '''rose'''
 
-# color
-
-====Translations====
-*English: [[pink]]
+# [[pink]]
 
 ===Noun===
 '''rose''' ''f''
 
-# flower of the plant ''la [[fleur]] du [[rosier]]''
-
-====Translations====
-*English: rose
+# rose, flower of the plant ''la [[fleur]] du [[rosier]]''
 
 ===Noun===
 '''rose''' ''m''
 
-# the color pink
+# the colour pink
 ----
 
 ==Italian==
@@ -113,10 +107,7 @@
 ===Verb===
 
 # (''third-person singular remote past of [[rodere]]'') [[bite]]d
-
 [[Category:English colors]]
-
-
 [[fr:rose]]
 [[it:rose]]
 [[de:rose]]
