fmt, +A4 road, +ex <A4#65028>

--- a/wiki/A4.wikitext
+++ b/wiki/A4.wikitext
@@ -1,2 +1,14 @@
 =={{En}}==
-# A standard [[paper]] size, defined by the international standard ISO 216 as 210 x 297 mm.
+
+===Noun===
+'''A4'''
+
+# A standard [[paper]] size, defined by the international standard ISO 216 as 210 x 297 mm.  Often used attributively.
+#: ''This printer can handle Letter, Legal and A4.''
+#: ''Hand me a sheet of A4 paper, please.''
+
+===Proper Noun===
+'''A4'''
+
+# A major thoroughfare in England
+#: ''There is a long tailback on the A4, due to an accident.''
