/* [[Translations]] */ [[Gujarati]]: [[વિક્ષનરી]] <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -22,6 +22,7 @@
 *[[French]]: [[Wiktionnaire]]
 *[[Ga]]: [[Wikishinari]]
 *[[German]]: [[Wikiwörterbuch]]
+*[[Gujarati]]: [[વિક્ષનરી]]
 *[[Hebrew]]: [[ויקשנרי]] (Wiktionary)
 *[[Hindi]]: [[विक्षनरी]] विकीशब्दकोश
 *[[Interlingua]]: [[Wiktionario]]
