fr: gu: hi: <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -52,6 +52,9 @@
 [[el:Wiktionary]]
 [[nl:Wiktionary]]
 [[fi:Wiktionary]]
+[[fr:Wiktionary]]
+[[gu:Wiktionary]]
+[[hi:Wiktionary]]
 [[pt:Wiktionary]]
 [[vi:Wiktionary]]
 [[zh:Wiktionary]]
