/* French */  French = English? <frugal#64366>

--- a/wiki/frugal.wikitext
+++ b/wiki/frugal.wikitext
@@ -1,4 +1,25 @@
+==English==
+===Adjective===
+'''frugal'''
+# [[miserly]], [[avoid]]ing [[waste]]
+
+===Synonyms===
+*[[sobre]]
+
+== Translation ==
+[[French]]: frugal 
+
 ==French==
+'''frugal''' (''m''), frugaux (''pl'')
+# [[miserly]], [[avoid]]ing [[waste]]
+
+== Translation ==
+[[English]]: frugal 
+
+===Related terms===
+*[[frugalement]]
+*[[frugalité]]
+
 ==English==
 ===Adjective===
 '''frugal''' (''m pl.'' frugaux)
