--- a/wiki/frugal.wikitext
+++ b/wiki/frugal.wikitext
@@ -3,31 +3,19 @@
 '''frugal'''
 # [[miserly]], [[avoid]]ing [[waste]]
 
-===Synonyms===
-*[[sobre]]
-
-== Translation ==
+=== Translation ===
 [[French]]: frugal 
 
 ==French==
-'''frugal''' (''m''), frugaux (''pl'')
-# [[miserly]], [[avoid]]ing [[waste]]
-
-== Translation ==
-[[English]]: frugal 
-
-===Related terms===
-*[[frugalement]]
-*[[frugalité]]
-
-==English==
 ===Adjective===
 '''frugal''' (''m pl.'' frugaux)
-
 # [[miserly]], [[avoid]]ing [[waste]]
 
 ===Synonyms===
 *[[sobre]]
+
+=== Translation ===
+[[English]]: frugal 
 
 ===Related terms===
 *[[frugalement]]
