--- a/wiki/sober.wikitext
+++ b/wiki/sober.wikitext
@@ -1,4 +1,6 @@
 =={{en}}==
 ===Adjective===
 # not [[drunk]]; not [[intoxicated]]
-# in character, not given to excessive drinknig of alcohol; [[moderate]]; [[serious]]
+# not given to [[excess]]ive drinknig of [[alcohol]]; 
+# in [[character]]; [[moderate]]; [[realistic]]; [[serious]]; not [[playful]]; not [[passionate]]; [[cool]]; [[self-controlled]];
+# [[dull]]; not [[bright]] or [[colorful]];
