--- a/wiki/pisces.wikitext
+++ b/wiki/pisces.wikitext
@@ -26,4 +26,4 @@ Latin
 *German: [[Fisch]] ''m''
 *Greek: (ichthos) (anc.), (psari) (mod.)
 *Italian: [[pesce]]
-*Portuguese: [[peixe]]
+*Portuguese: [[peixe]] ''m''
