--- a/wiki/welcome.wikitext
+++ b/wiki/welcome.wikitext
@@ -44,6 +44,7 @@
 *{{sw}}: [[karibu]]!
 *{{sv}}: [[välkommen]]!
 *{{tr}}: [[hoş geldiniz]]!
+*((tt)): [[räxim itegez]]!
 *{{vi}}: [[xin chào]]!, [[chào]]!, [[hoan nghênh]]!
 *{{vo}}: [[vekömö]]!
 *{{xh}}: [[namkelekile]]!
