--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -60,6 +60,7 @@
 *Spanish: [[hola]] (1), [[diga]] (2), [[aló]] (2), [[bueno]] (2)
 *Swedish: [[god dag]], [[hallå]], [[hej]]
 *[[Tagalog]]: [[helo]], [[hoy]]
+*[[Tatar]]: [[isänme]](sez)!, [[sälâm]]! (1), [[allo]], [[hallow]] (2)
 *Thai: (sawaad-dii)
 *Turkish: [[merhaba]] (1), [[alo]] (2), [[efendim]] (2)
 *[[Tyvan]]: [[экии]] (ekii)
