--- a/wiki/system.wikitext
+++ b/wiki/system.wikitext
@@ -10,7 +10,7 @@
 # A collection of interconnected things
 #:a solar system
 # A way of organising or planning
-
+# A whole composed of relationships among the members
 ====Related terms====
 *[[systematic]]
 *[[systematisation]], [[systematization]]
