interwiki +pl <res#56222>

--- a/wiki/res.wikitext
+++ b/wiki/res.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Noun===
-'''res''' ''f'', genitive '''res'''
+'''res''' ''f'', genitive '''rei'''
 
 Fifth declension
 
@@ -14,3 +14,5 @@ Fifth declension
 *[[real]]
 *[[really]]
 *[[republic]]
+
+[[pl:res]]
