/* [[Wiktionary:List of acronyms and abbreviations|Abbreviation]] */ <UPS#42249>

--- a/wiki/UPS.wikitext
+++ b/wiki/UPS.wikitext
@@ -53,3 +53,6 @@ Disadvantages: Because of the technology used, online usually costs more than ot
 
 
 <a href="http://www.aeceuro.co.uk">Info added by AEC  Uninterruptible power supplies</a>
+Also you should detrimine wheter or no the UPS is true sine wave or modified sine wave.
+
+[http://www.4lots.com.com Info added by 4lots.com]
