--- a/wiki/generator.wikitext
+++ b/wiki/generator.wikitext
@@ -5,3 +5,5 @@ Latin
 #An apparatus in which vapor or gas is formed from a liquid or solid by means of heat or chemical process, as a steam boiler, gas retort, or vessel for generating carbonic acid gas, etc.
 #An apparatus for producing electrical energy
 #''(Music):'' The principal sound or sounds by which others are produced; the fundamental note or root of the common [[chord]]; -- called also '''[[generating tone]]'''
+
+[[pl:generator]]
