--- a/wiki/gay.wikitext
+++ b/wiki/gay.wikitext
@@ -79,7 +79,7 @@ The sense of ''homosexual'' is said to have come from an Arabic word via French.
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Catalan: [[gai]]
-*Esperanto: [[samseksema]], [[samseksema|samseksama]]
+*Esperanto: [[samseksema]], [[samseksema|samseksama]], [[gejo]]
 *Finnish: [[homo#Finnish|homo-]], [[homoseksuaalinen]]
 *French: gai, gay, [[homo#French|homo]]
 *German: [[schwul]]
@@ -167,6 +167,7 @@ However, the use of '''gay''' as a noun seems no different from any other noun a
 
 ==== Translations ====
 *Bulgarian: [[гей]]
+*Esperanto: [[gejo]] [[samseksemulo]]
 *Finnish: [[homo#Finnish|homo]], [[homoseksuaali]] (''gender-neutral''), gay, [[gei]] (''urban colloquial'')
 *French: gai, gay ''m'', [[homo]] ''m'', [[lesbienne]] ''f'' (''female'')
 *German: [[Homosexuelle(r)]] (''gender-neutral''), [[Schwuler]] ''m'', [[Lesbierin]] ''f'' (formal), [[Lesbe]] ''f'' (''urban colloquial'')
