--- a/wiki/gay.wikitext
+++ b/wiki/gay.wikitext
@@ -79,7 +79,7 @@ The sense of ''homosexual'' is said to have come from an Arabic word via French.
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Catalan: [[gai]]
-*Esperanto: [[samseksema]], [[samseksema|samseksama]], [[gejo]]
+*Esperanto: [[samseksema]], [[samseksema|samseksama]], [[geja]]
 *Finnish: [[homo#Finnish|homo-]], [[homoseksuaalinen]]
 *French: gai, gay, [[homo#French|homo]]
 *German: [[schwul]]
