--- a/wiki/gay.wikitext
+++ b/wiki/gay.wikitext
@@ -167,7 +167,7 @@ However, the use of '''gay''' as a noun seems no different from any other noun a
 
 ==== Translations ====
 *Bulgarian: [[гей]]
-*Esperanto: [[gejo]] [[samseksemulo]]
+*Esperanto: [[gejo]] , [[samseksemulo]]
 *Finnish: [[homo#Finnish|homo]], [[homoseksuaali]] (''gender-neutral''), gay, [[gei]] (''urban colloquial'')
 *French: gai, gay ''m'', [[homo]] ''m'', [[lesbienne]] ''f'' (''female'')
 *German: [[Homosexuelle(r)]] (''gender-neutral''), [[Schwuler]] ''m'', [[Lesbierin]] ''f'' (formal), [[Lesbe]] ''f'' (''urban colloquial'')
