--- a/wiki/acting.wikitext
+++ b/wiki/acting.wikitext
@@ -1,1 +1,10 @@
-#REDIRECT [[act]]
+==English==
+
+===Adjective===
+
+Temporarily assuming the duties or authority of another person when they are not there or are unable to do their job. 
+: ''The Acting Minister must sign Executive Council documents in a Minister's absence.''
+: ''Acting President of the United States is a temporary office in the government of the United States.''
+
+===Rerated Terms===
+*[[Act]]
