--- a/wiki/petty.wikitext
+++ b/wiki/petty.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Adjective===
-# (''[[superlative]]'') Little; trifling; inconsiderable; also, inferior; subordinate; as, a petty fault; a petty prince.
+# (''[[superlative]]'') [[little]]; [[trifling]]; [[inconsiderable]]; also, [[inferior]]; [[subordinate]]; as, a petty [[fault]]; a petty [[prince]].
