--- a/wiki/adelantadillo.wikitext
+++ b/wiki/adelantadillo.wikitext
@@ -1,7 +1,5 @@
-==Spanish==
-
+==English==
+===Etymology===
+Spanish
+===Nath===
 #A [[Spanish]] [[red]] [[wine]] made of the first [[ripe]] [[grape]]s.
-
-
-----
-{{webster}}
