--- a/wiki/adelantadillo.wikitext
+++ b/wiki/adelantadillo.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Etymology===
 Spanish
-===Nath===
+===Noun===
 #A [[Spanish]] [[red]] [[wine]] made of the first [[ripe]] [[grape]]s.
