--- a/wiki/adelantado.wikitext
+++ b/wiki/adelantado.wikitext
@@ -1,11 +1,7 @@
 ==Spanish==
 
 ===Etymology===
-Spanish, [[prop. p.]] of ''[[adelantar]]'' to advance, to promote.
+Spanish, past participle of ''[[adelantar]]'' to advance, to promote.
 
 ===Noun===
-#A [[governor]] of a [[province]]; a [[commander]].
-
-
-----
-{{webster}}
+#A [[governor]] of a [[province]]; a [[commander]]. - [[William H. Prescott]]
