--- a/wiki/adelaster.wikitext
+++ b/wiki/adelaster.wikitext
@@ -4,8 +4,4 @@
 Greek not manifest + a star.
 
 ===Noun===
-#(''[[Botany]]'') A [[provisional]] [[name]] for a [[plant]] which has not had its [[flower]]s [[botanically]] [[examine]]d, and therefore has not been referred to its proper [[genus]].
-
-
-----
-{{webster}}
+#''(Botany):'' A [[provisional]] [[name]] for a [[plant]] which has not had its [[flower]]s [[botanically]] [[examine]]d, and therefore has not been referred to its proper [[genus]].
