--- a/wiki/additory.wikitext
+++ b/wiki/additory.wikitext
@@ -1,6 +1,4 @@
 ==English==
 
 ===Adjective===
-#Tending to [[add]]; making some [[addition]].
-
-{{rfd}}
+#''(Rare):'' Tending to [[add]]; making some [[addition]]. - [[John Arbuthnot]]?
