--- a/wiki/aspirate.wikitext
+++ b/wiki/aspirate.wikitext
@@ -12,7 +12,7 @@ From L. ''spiritus asper'', lit. '[[rough]] [[breath]],' from ''asper'' '[[rough
 
 ===Noun===
 '''aspirate'''
-# ''([[linguistics]])'' The puff of [[air]] [[accompanying]] the [[release]] of a [[stop consonant]].
+# ''([[linguistics]])'' The puff of [[air]] [[accompany|accompanying]] the [[release]] of a [[plosive consonant]].
 
 ===Verb===
 '''aspirate'''
