--- a/wiki/addititious.wikitext
+++ b/wiki/addititious.wikitext
@@ -4,8 +4,4 @@
 Latin ''addititius'', from ''addere''.
 
 ===Noun===
-[[Additive]]. Sir J. [[Herschel]].
-
-
-----
-{{webster}}
+#''(Rare):'' [[Additive]]. - Sir [[John Herschel]].
