--- a/wiki/%E7%8C%9C.wikitext
+++ b/wiki/%E7%8C%9C.wikitext
@@ -28,8 +28,31 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chaai1
 
-* '''Compounds''':
-**[[猜測]], ([[猜测]])
+===Compounds===
+*[[猜不透]]
+*[[猜不着]]
+*[[猜測]], [[猜测]]
+*[[猜忖]]
+*[[猜得着]]
+*[[猜断]]
+*[[猜度]]
+*[[猜忌]]
+*[[猜枚]]
+*[[猜谜儿]]
+*[[猜谜]]
+*[[猜摸]]
+*[[猜破]]
+*[[猜拳]]
+*[[猜思]]
+*[[猜题]]
+*[[猜透]]
+*[[猜嫌]]
+*[[猜详]]
+*[[猜想]]
+*[[猜哑谜]]
+*[[猜疑]]
+*[[猜着]]
+*[[猜中]]
 
 * '''Other info''': 
 
