--- a/wiki/%E9%9B%B7.wikitext
+++ b/wiki/%E9%9B%B7.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': thunder
+* '''Common Meaning''': [[thunder]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -28,11 +28,33 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': leui4
 
+===Compounds===
+*[[雷达]]
+*[[雷打不动]]
+*[[雷电]]
+*[[雷动]]
+*[[雷公]]
+*[[雷管]]
+*[[雷害]]
+*[[雷击]]
+*[[雷厉风行]]
+*[[雷鸣]]
+*[[雷鸟]]
+*[[雷声]]
+*[[雷声大，雨点小]]
+*[[雷霆]]
+*[[雷霆万钧]]
+*[[雷同]]
+*[[雷丸]]
+*[[雷雨]]
+*[[雷雨云]]
+*[[雷阵雨]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[らい]] (rai), [[るい]] (rui)
