--- a/wiki/%E7%94%98.wikitext
+++ b/wiki/%E7%94%98.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#sweetness
-*# sweet, tasty
+*# [[sweetness]]
+*# [[sweet]], [[tasty]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,40 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gam1
 
+===Compounds===
+*[[甘拜下风]]
+*[[甘草]]
+*[[甘脆]], [[干毳]]
+*[[甘服]]
+*[[甘汞]]
+*[[甘瓜苦蒂]]
+*[[甘蕉]]
+*[[甘居]]
+*[[甘苦]]
+*[[甘蓝]]
+*[[甘冽]]
+*[[甘霖]]
+*[[甘露]]
+*[[甘美]]
+*[[甘泉]]
+*[[甘受]]
+*[[甘薯]]
+*[[甘甜]]
+*[[甘心]]
+*[[甘休]]
+*[[甘言]]
+*[[甘油]]
+*[[甘于]]
+*[[甘雨]]
+*[[甘愿]]
+*[[甘蔗]]
+*[[甘之如饴]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
