--- a/wiki/%E5%AE%B6.wikitext
+++ b/wiki/%E5%AE%B6.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#house, home, residence
-*# family
-
+*# [[house]], [[home]], [[residence]]
+*# [[family]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +30,135 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ga1
 
+===Compounds===
+*[[家财]]
+*[[家蚕]]
+*[[家产]]
+*[[家长里短]], [[家长里短儿]]
+*[[家常]]
+*[[家常便饭]]
+*[[家常话]]
+*[[家仇]]
+*[[家丑]]
+*[[家畜]]
+*[[家传]]
+*[[家祠]]
+*[[家慈]]
+*[[家大业大]]
+*[[家当]], [[家当儿]]
+*[[家道]]
+*[[家底]], [[家底儿]]
+*[[家电]]
+*[[家丁]]
+*[[家法]]
+*[[家访]]
+*[[家风]]
+*[[家父]]
+*[[家鸽]]
+*[[家馆]]
+*[[家规]]
+*[[家户]]
+*[[家伙]]
+*[[家鸡]]
+*[[家给人足]]
+*[[家计]]
+*[[家祭]]
+*[[家家]], [[家家儿]]
+*[[家家户户]]
+*[[家教]]
+*[[家姐]]
+*[[家景]]
+*[[家境]]
+*[[家居]]
+*[[家具]]
+*[[家眷]]
+*[[家君]]
+*[[家口]]
+*[[家累]]
+*[[家里]]
+*[[家门]]
+*[[家庙]]
+*[[家母]]
+*[[家娘]]
+*[[家奴]]
+*[[家贫如洗]]
+*[[家破人亡]]
+*[[家谱]]
+*[[家雀儿]]
+*[[家禽]]
+*[[家人]]
+*[[家舍]]
+*[[家生子]], [[家生子儿]]
+*[[家声]]
+*[[家什]]
+*[[家史]]
+*[[家世]]
+*[[家事]]
+*[[家室]]
+*[[家书]]
+*[[家属]]
+*[[家鼠]]
+*[[家数]]
+*[[家私]]
+*[[家天下]]
+*[[家庭]]
+*[[家庭病床]]
+*[[家庭承包]]
+*[[家庭妇女]]
+*[[家庭教育]]
+*[[家庭手工业]]
+*[[家庭影院]]
+*[[家徒四壁]]
+*[[家兔]]
+*[[家蚊]]
+*[[家屋]]
+*[[家无担石]], [[家无儋石]]
+*[[家务]]
+*[[家弦胡诵]]
+*[[家乡]]
+*[[家小]]
+*[[家信]]
+*[[家兄]]
+*[[家学]]
+*[[家训]]
+*[[家鸭]]
+*[[家严]]
+*[[家宴]]
+*[[家燕]]
+*[[家养]]
+*[[家业]]
+*[[家蝇]]
+*[[家用]]
+*[[家鱼]]
+*[[家喻户晓]]
+*[[家园]]
+*[[家院]]
+*[[家宅]]
+*[[家长]]
+*[[家长制]]
+*[[家珍]]
+*[[家种]]
+*[[家主]]
+*[[家传]]
+*[[家资]]
+*[[家子]]
+*[[家族]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[か]] (ka), [[け]] (ke), [[こ]] (ko)
 ** '''[[Kun]]''': [[いえ]] (ie), [[や]] (ya), [[うち]] (uchi)
+
+===Compounds===
+*[[家屋]]
+*[[家具]]
+*[[家族]]
+*[[家庭]]
 
 * '''Other info''':  
 
