--- a/wiki/acidify.wikitext
+++ b/wiki/acidify.wikitext
@@ -1,7 +1,7 @@
 == English ==
 ===Etymology===
-Latin ''[[acidus]]'' sour, acid + -fy; compare French ''acidifier''
-=== Transitive verb ===
+Latin ''[[acidus]]'' sour, acid + -fy; compare French ''[[acidifier]]''
+===Transitive verb===
 '''acidify''', '''[[acidifies]]''', '''[[acidifying]]''', '''[[acidified]]'''
 
 # make something [[acid]] or [[sour]], to convert into an acid, to neutralize [[alkalis]], as to '''acidify''' sugar
@@ -9,14 +9,14 @@ Latin ''[[acidus]]'' sour, acid + -fy; compare French ''acidifier''
 #:'''Quotations'''
 #:*His thin existence all '''acidified''' into rage. - [[Thomas Carlyle]]
 
-==== Translations ====
-* Finnish: [[happamoittaa]] (1, ''making''), [[happamoitua]] (1, ''converting''), [[hapantaa]] (1, ''non-technical making''), [[hapantua]] (1, ''non-technical converting''), [[katkeroitua]] (2)
-* French: [[acidifier]]
-* German: [[Säuern sich]]
-* Interlingua: [[acidificar]]
-* Italian: [[acidificare]]
-* Portuguese: [[acidificar]]
-* Spanish: [[acidificar]]
+====Translations====
+* '''Finnish:''' [[happamoittaa]] (1, ''making''), [[happamoitua]] (1, ''converting''), [[hapantaa]] (1, ''non-technical making''), [[hapantua]] (1, ''non-technical converting''), [[katkeroitua]] (2)
+* '''French:''' [[acidifier]]
+* '''German:''' [[Säuern sich]]
+* '''Interlingua:''' [[acidificar]]
+* '''Italian:''' [[acidificare]]
+* '''Portuguese:''' [[acidificar]]
+* '''Spanish:''' [[acidificar]]
 
 ===Related Terms===
 *[[acid]]
