--- a/wiki/%E8%8A%B1.wikitext
+++ b/wiki/%E8%8A%B1.wikitext
@@ -28,8 +28,169 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fa1
 
-* '''Compounds''':
-** [[花粉]]
+===Compounds===
+*[[花把势]]
+*[[花白]]
+*[[花瓣]]
+*[[花苞]]
+*[[花被]]
+*[[花边]], [[花边儿]]
+*[[花柄]]
+*[[花不棱登]], [[花不棱登的]]
+*[[花不起]]
+*[[花布]]
+*[[花菜]]
+*[[花草]]
+*[[花插]]
+*[[花茶]]
+*[[花铲]]
+*[[花厂]]
+*[[花车]]
+*[[花城]]
+*[[花池子]]
+*[[花丛]]
+*[[花簇]]
+*[[花大姐]]
+*[[花大着]]
+*[[花旦]]
+*[[花灯]]
+*[[花灯戏]]
+*[[花点子]]
+*[[花雕]]
+*[[花朵]]
+*[[花萼]]
+*[[花儿]]
+*[[花房]]
+*[[花肥]]
+*[[花费]]
+*[[花粉]]
+*[[花岗岩]]
+*[[花糕]]
+*[[花格]]
+*[[花梗]]
+*[[花骨朵]]
+*[[花鼓]]
+*[[花鼓戏]]
+*[[花冠]]
+*[[花好月圆]]
+*[[花和尚]]
+*[[花盒]]
+*[[花红]]
+*[[花红柳绿]]
+*[[花花肠子]]
+*[[花花搭搭]], [[花花搭搭的]]
+*[[花花公子]]
+*[[花花绿绿]], [[花花绿绿的]]
+*[[花花世界]]
+*[[花环]]
+*[[花卉]]
+*[[花会]]
+*[[花活]]
+*[[花甲]]
+*[[花架]]
+*[[花架子]]
+*[[花剑]]
+*[[花椒]]
+*[[花轿]]
+*[[花街柳巷]]
+*[[花茎]]
+*[[花镜]]
+*[[花卷]], [[花卷儿]]
+*[[花魁]]
+*[[花篮]], [[花篮儿]]
+*[[花蕾]]
+*[[花梨]]
+*[[花里胡哨]], [[花里胡哨的]]
+*[[花脸]]
+*[[花翎]]
+*[[花令]]
+*[[花柳病]]
+*[[花露水]]
+*[[花猫]], [[花猫儿]]
+*[[花蜜]]
+*[[花面狸]]
+*[[花苗]]
+*[[花名]]
+*[[花名册]]
+*[[花木]]
+*[[花呢]]
+*[[花鸟]]
+*[[花农]]
+*[[花盘]]
+*[[花炮]]
+*[[花盆]], [[花盆儿]]
+*[[花瓶]], [[花瓶儿]]
+*[[花圃]]
+*[[花期]]
+*[[花钱]]
+*[[花枪]]
+*[[花腔]]
+*[[花墙]]
+*[[花楸]]
+*[[花圈]]
+*[[花拳绣腿]]
+*[[花儿洞子]]
+*[[花儿匠]]
+*[[花儿样子]]
+*[[花儿针]]
+*[[花容月貌]]
+*[[花蕊]]
+*[[花色]]
+*[[花纱布]]
+*[[花衫]]
+*[[花哨]]
+*[[花生]]
+*[[花生饼]]
+*[[花生豆儿]]
+*[[花生酱]]
+*[[花生米]]
+*[[花生油]]
+*[[花市]]
+*[[花饰]]
+*[[花事]]
+*[[花束]]
+*[[花丝]]
+*[[花台]]
+*[[花坛]]
+*[[花天酒地]]
+*[[花厅]]
+*[[花筒]]
+*[[花头]]
+*[[花团锦簇]]
+*[[花托]]
+*[[花纹]], [[花纹儿]]
+*[[花香鸟语]]
+*[[花项]]
+*[[花消]], [[花销]]
+*[[花鞋]]
+*[[花心]]
+*[[花信]]
+*[[花须]]
+*[[花序]]
+*[[花絮]]
+*[[花押]]
+*[[花芽]]
+*[[花言巧语]]
+*[[花眼]]
+*[[花样]], [[花样儿]]
+*[[花样刀]]
+*[[花样滑冰]]
+*[[花样游泳]]
+*[[花椰菜]]
+*[[花用]]
+*[[花园]], [[花园儿]]
+*[[花账]]
+*[[花障]], [[花障儿]]
+*[[花招]], [[花招儿]], [[花着]], [[花着儿]]
+*[[花朝]]
+*[[花朝月夕]]
+*[[花枝招展]]
+*[[花轴]]
+*[[花烛]]
+*[[花柱]]
+*[[花砖]]
+*[[花子]]
+*[[花子儿]]
 
 * '''Other info''': 
 
